--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -68,6 +68,7 @@ jobs:
 
           git commit -m "Sync blog posts from Notion"
 
+          git pull --rebase origin main
           git push origin main
 
       - name: Report completion
