--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -2,8 +2,10 @@ name: Sync Notion to Blog
 
 on:
   schedule:
-    # 매 6시간마다 실행 (00:00, 06:00, 12:00, 18:00 UTC)
-    - cron: '0 */6 * * *'
+    # 매일 오후 1시 (13:00 KST = 04:00 UTC)
+    - cron: '0 4 * * *'
+    # 매일 오후 6시 (18:00 KST = 09:00 UTC)
+    - cron: '0 9 * * *'
 
   workflow_dispatch:  # 수동 실행 가능
 
